--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,39 @@
-# Logs
-logs
-*.log
+# dependencies
+/node_modules
+
+# production build
+/dist
+/build
+/.netlify
+
+# IDE & editor
+.vscode/
+.idea/
+*.swp
+
+# system files
+.DS_Store
+Thumbs.db
+
+# logs & debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
+*.log
 
-node_modules
-dist
-dist-ssr
-*.local
+# environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# typescript
+*.tsbuildinfo
+
+# cache
+/.parcel-cache
+/.eslintcache
+/.stylelintcache
+/.vite
